# beets-ebooks

./: .flake8  .gitignore  ARCHITECTURE.md  LICENSE  README.md  USAGE_GUIDE.md  create_test_comics.py  create_test_files.py  ebook_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_comic_info.py  test_comic_support.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
beetsplug/: ebooks.py
examples/: basic_usage.py
test_ebooks/: Batman - Detective Comics 001.cbz
tests/: test_comic_support.py  test_ebook_manager.py  test_ebooks.py
