[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beets-ebooks"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A Beets plugin for managing ebook collections"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "beets>=1.6.0",
    "requests>=2.25.0",
    "ebooklib>=0.18",
    "PyPDF2>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/beets-ebooks"
"Bug Reports" = "https://github.com/yourusername/beets-ebooks/issues"

[project.entry-points."beets.plugins"]
ebooks = "beetsplug.ebooks:EBooksPlugin"

[tool.setuptools.packages.find]
include = ["beetsplug*"]
